// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.30.0

package dbsqlc

import (
	"database/sql"
	"database/sql/driver"
	"fmt"
	"time"

	"github.com/google/uuid"
	"github.com/sqlc-dev/pqtype"
)

type TestKind string

const (
	TestKindGeneral        TestKind = "general"
	TestKindAdhoc          TestKind = "adhoc"
	TestKindTriage         TestKind = "triage"
	TestKindIntegration    TestKind = "integration"
	TestKindUserAcceptance TestKind = "user_acceptance"
	TestKindRegression     TestKind = "regression"
	TestKindSecurity       TestKind = "security"
	TestKindUserInterface  TestKind = "user_interface"
	TestKindScenario       TestKind = "scenario"
)

func (e *TestKind) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = TestKind(s)
	case string:
		*e = TestKind(s)
	default:
		return fmt.Errorf("unsupported scan type for TestKind: %T", src)
	}
	return nil
}

type NullTestKind struct {
	TestKind TestKind
	Valid    bool // Valid is true if TestKind is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullTestKind) Scan(value interface{}) error {
	if value == nil {
		ns.TestKind, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.TestKind.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullTestKind) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.TestKind), nil
}

type TestRunState string

const (
	TestRunStatePending TestRunState = "pending"
	TestRunStatePassed  TestRunState = "passed"
	TestRunStateFailed  TestRunState = "failed"
	TestRunStateBlocked TestRunState = "blocked"
)

func (e *TestRunState) Scan(src interface{}) error {
	switch s := src.(type) {
	case []byte:
		*e = TestRunState(s)
	case string:
		*e = TestRunState(s)
	default:
		return fmt.Errorf("unsupported scan type for TestRunState: %T", src)
	}
	return nil
}

type NullTestRunState struct {
	TestRunState TestRunState
	Valid        bool // Valid is true if TestRunState is not NULL
}

// Scan implements the Scanner interface.
func (ns *NullTestRunState) Scan(value interface{}) error {
	if value == nil {
		ns.TestRunState, ns.Valid = "", false
		return nil
	}
	ns.Valid = true
	return ns.TestRunState.Scan(value)
}

// Value implements the driver Valuer interface.
func (ns NullTestRunState) Value() (driver.Value, error) {
	if !ns.Valid {
		return nil, nil
	}
	return string(ns.TestRunState), nil
}

type Environment struct {
	ID          int32
	ProjectID   sql.NullInt32
	Name        string
	Description sql.NullString
	BaseUrl     sql.NullString
	CreatedAt   time.Time
	UpdatedAt   time.Time
}

type Invite struct {
	ID            int32
	SenderEmail   string
	ReceiverEmail string
	Token         string
	ExpiresAt     sql.NullTime
}

type Module struct {
	ID          int32
	ProjectID   int32
	Name        string
	Code        string
	Priority    int32
	Type        string
	Description string
	CreatedAt   sql.NullTime
	UpdatedAt   sql.NullTime
}

type Org struct {
	ID int32
	// Name of the organization
	Name string
	// Address of the org
	Address sql.NullString
	// Country of the org
	Country sql.NullString
	// Optional github url
	GithubUrl sql.NullString
	// Optional website url
	WebsiteUrl sql.NullString
	// User who created the org
	CreatedByID int32
	CreatedAt   time.Time
	UpdatedAt   sql.NullTime
}

type OrgMember struct {
	ID        int32
	OrgID     int32
	UserID    int32
	Role      string
	CreatedAt time.Time
	RemovedAt sql.NullTime
}

type Page struct {
	ID int32
	// Optional parent of the current page
	ParentPageID sql.NullInt32
	// Version of the page
	PageVersion string
	// Organization which owns the page. Here for quick analytical queries
	OrgID int32
	// Project ID which the page belongs to
	ProjectID int32
	// the name or token to embed the page as
	Code string
	// The title of the page
	Title    string
	FilePath sql.NullString
	// The raw markdown content of the page
	Content string
	// Page Type: Prose, Help Video, Walkthrough, FAQ or something else
	PageType string
	// The mime/type of the page, by default text/markdown
	MimeType string
	// Whether the page has media links to Youtube or some other supported site
	HasEmbeddedMedia bool
	// If the page is pulled from an external source,the url to that page
	ExternalContentUrl sql.NullString
	// Notion URL for a page containing the content, similar to external_content_url
	NotionUrl sql.NullString
	// User who last edited this page on the system
	LastEditedBy int32
	CreatedBy    int32
	CreatedAt    sql.NullTime
	UpdatedAt    sql.NullTime
	DeletedAt    sql.NullTime
}

type Project struct {
	ID int32
	// Title of the project
	Title string
	// Description of the project
	Description string
	// Version of the project
	Version sql.NullString
	// Whether project is active or not
	IsActive sql.NullBool
	// Whether project is public or not
	IsPublic sql.NullBool
	// URL to the projects website
	WebsiteUrl sql.NullString
	// URL to the GitHub Organization or Project link
	GithubUrl sql.NullString
	// URL to Trello if available
	TrelloUrl sql.NullString
	// URL to JIRA if available
	JiraUrl sql.NullString
	// URL to Monday.com if available
	MondayUrl sql.NullString
	// The ID of the owner or creator of the project
	OwnerUserID             int32
	CreatedAt               time.Time
	UpdatedAt               time.Time
	DeletedAt               sql.NullTime
	Code                    string
	ParentProjectID         sql.NullInt32
	TestcaseTemplate        sql.NullString
	AutomatedTestingEnabled bool
	SupportedRunners        []string
}

type ProjectTester struct {
	ID int32
	// The project associated with this tester
	ProjectID int32
	// The user who is acting as a tester for the project
	UserID int32
	// Role of the tester, roles can be lead, engineer, client, bot or ai_agent
	Role      string
	IsActive  bool
	CreatedAt sql.NullTime
	UpdatedAt sql.NullTime
}

type Report struct {
	ID        uuid.UUID
	ProjectID int32
	Name      string
	Type      string
	Status    string
	CreatedAt sql.NullTime
	FilePath  sql.NullString
	UpdatedAt sql.NullTime
}

type TestCase struct {
	ID uuid.UUID
	// The kind of test this case represents
	Kind TestKind
	// A global or project defined code for this test cases
	Code string
	// Feature or module under test if applicable
	FeatureOrModule sql.NullString
	// The title of the test case, think of as E-mail subject
	Title string
	// Description of the test-case
	Description string
	// Whether test case is a draft i.e. not complete
	IsDraft sql.NullBool
	// Tags for the test case
	Tags []string
	// User who created the test case
	CreatedByID int32
	CreatedAt   sql.NullTime
	UpdatedAt   sql.NullTime
	// Project for the test cases
	ProjectID        sql.NullInt32
	Suggested        sql.NullBool
	Runner           sql.NullString
	ScriptPath       sql.NullString
	ParentTestCaseID uuid.NullUUID
}

type TestCaseSequence struct {
	ProjectID       int32
	Prefix          string
	CurrentVal      int32
	LastGeneratedAt sql.NullTime
}

type TestPlan struct {
	ID int64
	// Project which this test plan is under
	ProjectID int32
	// [Optional] User who is assigned to the plan
	AssignedToID int32
	// User who created the plan
	CreatedByID int32
	// User who last updated the plan
	UpdatedByID int32
	// The kind of test the plan targets
	Kind TestKind
	// Description of the test plan
	Description sql.NullString
	// When the test (should) starts
	StartAt sql.NullTime
	// When the test plan was actually closed
	ClosedAt sql.NullTime
	// [Optional] A scheduled end date for the test
	ScheduledEndAt sql.NullTime
	// Number of test cases under this plan, counter cached
	NumTestCases int32
	// Number of failed test cases under this plan, counter cached
	NumFailures int32
	// Whether test plan was completed or not
	IsComplete sql.NullBool
	// Whether test plan is locked or not
	IsLocked sql.NullBool
	// Whether the test plan has a report generated for it
	HasReport     sql.NullBool
	CreatedAt     sql.NullTime
	UpdatedAt     sql.NullTime
	EnvironmentID sql.NullInt32
}

type TestPlanCase struct {
	TestPlanID   int64
	TestCaseID   uuid.UUID
	AssignedToID int64
}

type TestPlanComment struct {
	ID              uuid.UUID
	TestPlanID      int64
	UserID          int64
	Content         string
	CreatedAt       sql.NullTime
	UpdatedAt       sql.NullTime
	ParentCommentID uuid.NullUUID
}

type TestPlansCase struct {
	TestPlanID uuid.UUID
	TestCaseID uuid.UUID
	AddedByID  sql.NullInt32
	CreatedAt  sql.NullTime
}

type TestRun struct {
	ID                    uuid.UUID
	ProjectID             int32
	TestPlanID            sql.NullInt32
	TestCaseID            uuid.UUID
	OwnerID               int32
	TestedByID            sql.NullInt32
	AssignedToID          sql.NullInt32
	AssigneeCanChangeCode sql.NullBool
	Code                  string
	ExternalIssueID       sql.NullString
	ResultState           TestRunState
	IsClosed              sql.NullBool
	Notes                 string
	ActualResult          sql.NullString
	ExpectedResult        sql.NullString
	Reactions             pqtype.NullRawMessage
	TestedOn              time.Time
	CreatedAt             sql.NullTime
	UpdatedAt             sql.NullTime
	EnvironmentID         sql.NullInt32
}

type TestRunResult struct {
	ID         uuid.UUID
	TestRunID  uuid.UUID
	Status     TestRunState
	Result     string
	Notes      sql.NullString
	ExecutedBy sql.NullInt32
	ExecutedAt time.Time
	CreatedAt  time.Time
	UpdatedAt  time.Time
}

type TestRunsComment struct {
	ID        int64
	TestRunID uuid.UUID
	AuthorID  int32
	Content   string
	MediaUrls pqtype.NullRawMessage
}

type User struct {
	ID int32
	// Firstname of the user
	FirstName string
	// Family name or Surname of the user
	LastName string
	// Preferred display name
	DisplayName sql.NullString
	// E-mail address of the user
	Email string
	// BCrypt encryped Password of the user
	Password string
	// Primary phone number, used for OTP in the future
	Phone string
	// Organization to which this user account belongs to, 0 for system
	OrgID       sql.NullInt32
	CountryIso  string
	City        sql.NullString
	Address     string
	IsActivated sql.NullBool
	IsReviewed  sql.NullBool
	// Whether the user is a system-wide administrator. Not to be confused with admin role
	IsSuperAdmin sql.NullBool
	// Whether user account is verified
	IsVerified sql.NullBool
	// Last login time of the user account
	LastLoginAt sql.NullTime
	// When the user confirmed their account e-mail
	EmailConfirmedAt sql.NullTime
	CreatedAt        sql.NullTime
	UpdatedAt        sql.NullTime
	DeletedAt        sql.NullTime
}
